fixed z-index of stage row
Former-commit-id: 4c5311ce3e66e3884a94efd7682e512d896b179b

--- a/client/app/components/ShopStageView/ShopStageView.scss
+++ b/client/app/components/ShopStageView/ShopStageView.scss
@@ -58,7 +58,7 @@
     background: white;
     border-top: 1px solid rgba(black, 0.2); 
     box-shadow: 0 -1px 2px 0 rgba(0, 0, 0, 0.2);
-    z-index: 500;
+    z-index: 499;
   }
   .line_box {
     position: relative;
